# ralph-py

./: LICENSE  README.md  e2e-report.md  pyproject.toml  research.md  spec.md
src/ralph/: __init__.py  __main__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
