[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph-py"
version = "0.4.0"
description = "Minimal CLI for orchestrating Ralph loops across coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "SiluPanda" },
]
keywords = ["ralph", "loop", "ai", "coding-agent", "cli", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9",
]

[project.urls]
Homepage = "https://github.com/SiluPanda/ralph-py"
Repository = "https://github.com/SiluPanda/ralph-py"
Issues = "https://github.com/SiluPanda/ralph-py/issues"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
ralph = "ralph.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
